crates/ty_python_semantic/resources/mdtest/snapshots/version_related_synt…_-_Version-related_synt…_-_`match`_statement_-_Before_3.10_(2545eaa83b635b8b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: version_related_syntax_errors.md - Version-related syntax error diagnostics - `match` statement - Before 3.10
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/version_related_syntax_errors.md
---

# Python source files

## mdtest_snippet.py

```
1 | match 2:  # error: 1 [invalid-syntax] "Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)"
2 |     case 1:
3 |         print("it's one")
```

# Diagnostics

```
error[invalid-syntax]
 --> src/mdtest_snippet.py:1:1
  |
1 | match 2:  # error: 1 [invalid-syntax] "Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)"
  | ^^^^^ Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)
2 |     case 1:
3 |         print("it's one")
  |

```
